tests/modeline/snapshots/integration__modeline__test_invalid_modeline_arg_stderr.snap
---
source: tests/modeline/mod.rs
expression: stderr
---
error: unexpected argument '--foo' found

  tip: to pass '--foo' as a value, use '-- --foo'

Usage: braille [OPTIONS] [SIZE] [COMMAND]

For more information, try '--help'.

