tests/modeline/snapshots/integration__modeline__test_invalid_modeline_prefix_stderr.snap
---
source: tests/modeline/mod.rs
expression: stderr
---
Error: error: Invalid modeline: "braile -r -3:4 4"

The first line should be the string "braille", followed by spaced separated options

Usage: braille [OPTIONS] [SIZE] [COMMAND]

For more information, try '--help'.


